# glang

./: CHANGELOG.md  LinearH.cabal  README.md  ToDo.txt  glang  glang.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: glang-0.1.0.0-inplace-glang-lib.conf  package.cache
dist-newstyle/packagedb/ghc-9.6.1/: LinearB-0.1.0.0-inplace-linearb-lib.conf  package.cache
src/: Main.hs
src/lib/: ANormalize.hs  Builder.hs  Expression.hs  GLang.hs  GMachine.hs  GraphReduction.hs  LambdaLifting.hs  LowerToGCode.hs  LowerToGcode.hs  Parser.hs  PatternMatching.hs
src/lib/Types/: Core.hs  Substitution.hs  TypeInference.hs
test/: GlangSpec.hs  ParserSpec.hs  Spec.hs  input.txt  input2.txt  input3.txt
test/example_prog/: fib.g  input2.txt  prog1.g  prog3.g  prog4.g  prog5.g  prog6.g  prog7.g
