cabal-version:      2.4
name:               LinearH
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library linearh-lib
    exposed-modules:    PatternMatching,
                        Expression,
                        Types.Core,
                        Types.TypeInference,
                        Types.Substitution,
                        GraphReduction
                        

    build-depends:  base,
                    containers,
                    mtl,
                    transformers,
                    array,
                    monad-loops,
                    vector
    
    hs-source-dirs: src/lib
    default-language: Haskell2010

executable LinearH
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base,
                    linearh-lib

    hs-source-dirs:   src
    default-language: Haskell2010
