cabal-version:      2.4
name:               glang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Parth Dhanotra
maintainer:         parth.dhanotra@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library glang-lib
    exposed-modules:    Expression,
                        GMachine,
                        Parser,
                        LambdaLifting,
                        Builder
    
    build-depends:  base,
                    containers,
                    mtl,
                    transformers,
                    megaparsec,
                    text,
                    parser-combinators

    hs-source-dirs: src/lib
    default-language: Haskell2010

executable glang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.16.4.0,
                    glang-lib,
                    text,
                    megaparsec,
                    containers,
                    mtl
                    
                    
    hs-source-dirs:   src
    default-language: Haskell2010
